crates/mir/tests/fixtures/errors/borrowck_overlapping_mut.snap
---
source: crates/mir/tests/lowering_errors.rs
assertion_line: 27
expression: err.to_string()
input_file: tests/fixtures/errors/borrowck_overlapping_mut.fe
---
error[10-0002]: borrow conflict in `fn borrowck_overlapping_mut`
  ┌─ borrowck_overlapping_mut.fe:4:5
  │
3 │     let p: mut u256 = mut x
  │                           - `x` is borrowed here
4 │     let q: mut u256 = mut x
  │     ^^^^^^^^^^^^^^^^^^^^^^^ cannot mutably borrow `x` while a mut borrow is active
